# experiments

./: README.md
cvclgl_interop/: CMakeLists.txt  README.md  opengl_interop.cpp
exple_qglwidget/: README.md  exple_qglwidget.pro  glwidget.hpp  main.cpp  myglwidget.cpp  myglwidget.hpp  window.cpp  window.hpp  window.ui
exple_qopenglwidget/: exple_qopenglwidget.pro  glwidget.cpp  glwidget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
exple_umat_opengl/: CMakeLists.txt  README.md  opengl_interop.cpp  winapp.hpp
exple_umat_qopenglwidget/: CMakeLists.txt  glwidget.cpp  glwidget.hpp  window.cpp  window.ui
qtclgl_interop/: README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  metaballs.cl  myglwidget.cpp  myglwidget.hpp  ocl_log.cpp  ocl_log.hpp  qtclgl_interop.pro
qtcvclgl_interop/: CMakeLists.txt  README.md  glwidget.hpp  main.cpp
qtgl_interop_01/: README.md  glwidget.cpp  qtgl_interop_01.pro  window.hpp
qtgl_interop_02/: README.md  glwidget.cpp  glwidget.hpp  main.cpp  qtgl_interop_02.pro  window.cpp  window.hpp  window.ui
